Fix username overflow on side menu

--- a/react-app/src/components/SideMenu/SideMenu.css
+++ b/react-app/src/components/SideMenu/SideMenu.css
@@ -60,3 +60,9 @@
     margin-right: 8px;
     font-size: 18px;
 }
+
+#sidemenu-username-container {
+    width: 200px;
+    overflow: hidden;
+    text-overflow: ellipsis;
+}
